# conan-ui

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  config.json.example  docker-compose.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
backend/: .env.example  .gitignore  artifactory.py  conan_client.py  config.py  credentials.py  main.py  pyproject.toml  requirements.txt  ruff.toml  schemas.py  test_conan_api.py  test_config_api.py
backend/routers/: cleanup.py  meta.py  packages.py
docker/: nginx.conf  nginx.conf.template  start.sh
frontend/: .env  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.tsx  index.css  setupTests.ts
frontend/src/components/: AdminMenu.css  AdminMenu.tsx  Brand.tsx  Dropdown.css  Dropdown.tsx  Footer.tsx  Layout.tsx  OsIcon.tsx  PackageBinaries.css  PackageBinaries.tsx  PackageDetail.css  PackageDetail.tsx  PackageList.css  PackageList.test.tsx  PackageList.tsx  PropertiesTable.css  PropertiesTable.tsx  SearchBar.css  SearchBar.tsx  icons.ts
frontend/src/context/: RemoteContext.tsx
frontend/src/pages/: CleanupPage.css  CleanupPage.tsx  PackageBinariesPage.tsx  PackageConfigurationPage.tsx  PackageListPage.tsx  RemoteSelectionPage.tsx
frontend/src/routes/: paths.ts
frontend/src/services/: api.ts
frontend/src/types/: conan.ts
frontend/src/utils/: dateUtils.ts
